crates/oxc_css/tests/error/scss/value/interpolation/semicolon.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `}`, but found `;`
  ┌─ semicolon.scss:1:14
  │
1 │ $foo: #{bar();};
  │              ^


